clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__960215_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/960215-1.c" (c, x86_64-unknown-linux-gnu)
global C : long_double<f80> = 2.000000e+00 [external, default, align 16, dso_local]
global U : long_double<f80> = 1.000000e+00 [external, default, align 16, dso_local]
global Y2 : long_double<f80> = 3.000000e+00 [external, default, align 16, dso_local]
global Y1 : long_double<f80> = 1.000000e+00 [external, default, align 16, dso_local]
global X : long_double<f80> = 0.000000e+00 [external, default, align 16, dso_local]
global Y : long_double<f80> = 0.000000e+00 [external, default, align 16, dso_local]
global Z : long_double<f80> = 0.000000e+00 [external, default, align 16, dso_local]
global T : long_double<f80> = 0.000000e+00 [external, default, align 16, dso_local]
global R : long_double<f80> = 0.000000e+00 [external, default, align 16, dso_local]
global S : long_double<f80> = 0.000000e+00 [external, default, align 16, dso_local]

fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = get_global @C : long_double<f80>*
    %3 = load %2 : long_double<f80>, align 16
    %4 = get_global @U : long_double<f80>*
    %5 = load %4 : long_double<f80>, align 16
    %6 = fadd %3, %5 : long_double<f80>
    %7 = get_global @Y2 : long_double<f80>*
    %8 = load %7 : long_double<f80>, align 16
    %9 = fmul %6, %8 : long_double<f80>
    %10 = get_global @X : long_double<f80>*
    store %9, %10, align 16
    %11 = get_global @C : long_double<f80>*
    %12 = load %11 : long_double<f80>, align 16
    %13 = get_global @U : long_double<f80>*
    %14 = load %13 : long_double<f80>, align 16
    %15 = fsub %12, %14 : long_double<f80>
    %16 = get_global @U : long_double<f80>*
    %17 = load %16 : long_double<f80>, align 16
    %18 = fsub %15, %17 : long_double<f80>
    %19 = get_global @Y : long_double<f80>*
    store %18, %19, align 16
    %20 = get_global @C : long_double<f80>*
    %21 = load %20 : long_double<f80>, align 16
    %22 = get_global @U : long_double<f80>*
    %23 = load %22 : long_double<f80>, align 16
    %24 = fadd %21, %23 : long_double<f80>
    %25 = get_global @U : long_double<f80>*
    %26 = load %25 : long_double<f80>, align 16
    %27 = fadd %24, %26 : long_double<f80>
    %28 = get_global @Z : long_double<f80>*
    store %27, %28, align 16
    %29 = get_global @C : long_double<f80>*
    %30 = load %29 : long_double<f80>, align 16
    %31 = get_global @U : long_double<f80>*
    %32 = load %31 : long_double<f80>, align 16
    %33 = fsub %30, %32 : long_double<f80>
    %34 = get_global @Y1 : long_double<f80>*
    %35 = load %34 : long_double<f80>, align 16
    %36 = fmul %33, %35 : long_double<f80>
    %37 = get_global @T : long_double<f80>*
    store %36, %37, align 16
    %38 = get_global @X : long_double<f80>*
    %39 = load %38 : long_double<f80>, align 16
    %40 = get_global @Z : long_double<f80>*
    %41 = load %40 : long_double<f80>, align 16
    %42 = get_global @U : long_double<f80>*
    %43 = load %42 : long_double<f80>, align 16
    %44 = fadd %41, %43 : long_double<f80>
    %45 = fsub %39, %44 : long_double<f80>
    %46 = get_global @X : long_double<f80>*
    store %45, %46, align 16
    %47 = get_global @Y : long_double<f80>*
    %48 = load %47 : long_double<f80>, align 16
    %49 = get_global @Y1 : long_double<f80>*
    %50 = load %49 : long_double<f80>, align 16
    %51 = fmul %48, %50 : long_double<f80>
    %52 = get_global @R : long_double<f80>*
    store %51, %52, align 16
    %53 = get_global @Z : long_double<f80>*
    %54 = load %53 : long_double<f80>, align 16
    %55 = get_global @Y2 : long_double<f80>*
    %56 = load %55 : long_double<f80>, align 16
    %57 = fmul %54, %56 : long_double<f80>
    %58 = get_global @S : long_double<f80>*
    store %57, %58, align 16
    %59 = get_global @T : long_double<f80>*
    %60 = load %59 : long_double<f80>, align 16
    %61 = get_global @Y : long_double<f80>*
    %62 = load %61 : long_double<f80>, align 16
    %63 = fsub %60, %62 : long_double<f80>
    %64 = get_global @T : long_double<f80>*
    store %63, %64, align 16
    %65 = get_global @U : long_double<f80>*
    %66 = load %65 : long_double<f80>, align 16
    %67 = get_global @Y : long_double<f80>*
    %68 = load %67 : long_double<f80>, align 16
    %69 = fsub %66, %68 : long_double<f80>
    %70 = get_global @R : long_double<f80>*
    %71 = load %70 : long_double<f80>, align 16
    %72 = fadd %69, %71 : long_double<f80>
    %73 = get_global @Y : long_double<f80>*
    store %72, %73, align 16
    %74 = get_global @S : long_double<f80>*
    %75 = load %74 : long_double<f80>, align 16
    %76 = get_global @Z : long_double<f80>*
    %77 = load %76 : long_double<f80>, align 16
    %78 = get_global @U : long_double<f80>*
    %79 = load %78 : long_double<f80>, align 16
    %80 = fadd %77, %79 : long_double<f80>
    %81 = get_global @U : long_double<f80>*
    %82 = load %81 : long_double<f80>, align 16
    %83 = fadd %80, %82 : long_double<f80>
    %84 = fsub %75, %83 : long_double<f80>
    %85 = get_global @Z : long_double<f80>*
    store %84, %85, align 16
    %86 = get_global @Y2 : long_double<f80>*
    %87 = load %86 : long_double<f80>, align 16
    %88 = get_global @U : long_double<f80>*
    %89 = load %88 : long_double<f80>, align 16
    %90 = fadd %87, %89 : long_double<f80>
    %91 = get_global @Y1 : long_double<f80>*
    %92 = load %91 : long_double<f80>, align 16
    %93 = fmul %90, %92 : long_double<f80>
    %94 = get_global @R : long_double<f80>*
    store %93, %94, align 16
    %95 = get_global @Y2 : long_double<f80>*
    %96 = load %95 : long_double<f80>, align 16
    %97 = get_global @Y1 : long_double<f80>*
    %98 = load %97 : long_double<f80>, align 16
    %99 = fmul %96, %98 : long_double<f80>
    %100 = get_global @Y1 : long_double<f80>*
    store %99, %100, align 16
    %101 = get_global @R : long_double<f80>*
    %102 = load %101 : long_double<f80>, align 16
    %103 = get_global @Y2 : long_double<f80>*
    %104 = load %103 : long_double<f80>, align 16
    %105 = fsub %102, %104 : long_double<f80>
    %106 = get_global @R : long_double<f80>*
    store %105, %106, align 16
    %107 = get_global @Y1 : long_double<f80>*
    %108 = load %107 : long_double<f80>, align 16
    %109 = const 5.000000e-01 : long_double<f80>
    %110 = fsub %108, %109 : long_double<f80>
    %111 = get_global @Y1 : long_double<f80>*
    store %110, %111, align 16
    scope {
        %115 = get_global @Z : long_double<f80>*
        %116 = load %115 : long_double<f80>, align 16
        %117 = const 6 : s32i
        %118 = cast(int_to_float) %117 : long_double<f80>
        %119 = cmp ne %116, %118 : bool
        if %119 {
            %120 = get_global @abort : (() -> void)*
            call @abort() [all]
            yield
        }
        yield
    }
    %112 = get_global @exit : ((s32i) -> void)*
    %113 = const 0 : s32i
    call @exit(%113) [all]
    %114 = load %0 : s32i
    return %114
}
