clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__960219_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/960219-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn f(%arg0: s32i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i):
        %6 = alloca s32i, "i", align 4
        store %arg0, %6
        scope {
            %7 = const 1 : s32i
            %8 = load %6 : s32i, align 4
            %9 = shift left %7, %8 : s32i
            %10 = const 1 : s32i
            %11 = and %9, %10 : s32i
            %12 = const 0 : s32i
            %13 = cmp eq %11, %12 : bool
            if %13 {
                %14 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        return
}
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    %2 = const 0 : s32i
    call @f(%2) [all]
    %3 = get_global @exit : ((s32i) -> void)*
    %4 = const 0 : s32i
    call @exit(%4) [all]
    %5 = load %0 : s32i
    return %5
}
