clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__960302_1.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/960302-1.c" (c, x86_64-unknown-linux-gnu)
global a : s64i = CirInt { ty: Named("s64i"), value: "1" } [external, default, align 8, dso_local]

fn foo() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %9 = alloca s32i, "__retval", align 4
        scope {
                %11 = get_global @a : s64i*
                %12 = load %11 : s64i, align 8
                %13 = const 2 : s64i
                rem
                %15 = const 2 : s64i
                rem
                %17 = const 2 : s64i
                rem
                %19 = const 2 : s64i
                rem
                %21 = const 2 : s64i
                rem
                %23 = const 2 : s64i
                rem
                %25 = const 2 : s64i
                rem
                %27 = const 2 : s64i
                rem
                switch %28 {
                        case equal [0] {
                                %33 = const 0 : s32i
                                store %33, %9
                                %34 = load %9 : s32i
                                return %34
                        }
                        case equal [1] {
                                %31 = const 1 : s32i
                                store %31, %9
                                %32 = load %9 : s32i
                                return %32
                        }
                        case default [] {
                                %29 = const -1 : s32i
                                store %29, %9
                                %30 = load %9 : s32i
                                return %30
                        }
                        yield
                }
                yield
        }
        %10 = load %9 : s32i
        return %10
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        scope {
                %5 = call @foo() : s32i [all]
                %6 = const 1 : s32i
                cmp
                if %7 {
                        %8 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %2 = get_global @exit : (s32i) -> void*
        %3 = const 0 : s32i
        call @exit(%3) [all]
        %4 = load %0 : s32i
        return %4
}
