clang-ir/tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__960311_2.snap
---
source: clang-ir/tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures.gcc-torture/960311-2.c" (c, x86_64-unknown-linux-gnu)
global count : s32i = CirInt { ty: Named("s32i"), value: "0" } [external, default, align 4, dso_local]

fn a1() -> void [external, c, no_inline, dso_local, nothrow] {
        %98 = get_global @count : s32i*
        %99 = load %98 : s32i, align 4
        inc
        store %100, %98, align 4
        return
}
fn b(%arg0: u16i) -> void [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u16i):
        %69 = alloca u16i, "data", align 2
        store %arg0, %69
        scope {
                %92 = load %69 : u16i, align 2
                %93 = cast(integral) %92 : s32i
                %94 = const 32768 : s32i
                and
                %96 = cast(int_to_bool) %95 : bool
                if %96 {
                        %97 = get_global @a1 : () -> void*
                        call @a1() [all]
                        yield
                }
                yield
        }
        %70 = const 1 : s32i
        %71 = load %69 : u16i, align 2
        %72 = cast(integral) %71 : s32i
        shift
        %74 = cast(integral) %73 : u16i
        store %74, %69, align 2
        scope {
                %86 = load %69 : u16i, align 2
                %87 = cast(integral) %86 : s32i
                %88 = const 32768 : s32i
                and
                %90 = cast(int_to_bool) %89 : bool
                if %90 {
                        %91 = get_global @a1 : () -> void*
                        call @a1() [all]
                        yield
                }
                yield
        }
        %75 = const 1 : s32i
        %76 = load %69 : u16i, align 2
        %77 = cast(integral) %76 : s32i
        shift
        %79 = cast(integral) %78 : u16i
        store %79, %69, align 2
        scope {
                %80 = load %69 : u16i, align 2
                %81 = cast(integral) %80 : s32i
                %82 = const 32768 : s32i
                and
                %84 = cast(int_to_bool) %83 : bool
                if %84 {
                        %85 = get_global @a1 : () -> void*
                        call @a1() [all]
                        yield
                }
                yield
        }
        return
}
fn abort() -> void [external, c, nothrow];
fn exit(%arg0: s32i) -> void [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
        %0 = alloca s32i, "__retval", align 4
        %1 = const 0 : s32i
        store %1, %0
        %2 = const 0 : s32i
        %3 = get_global @count : s32i*
        store %2, %3, align 4
        %4 = const 0 : u16i
        call @b(%4) [all]
        scope {
                %64 = get_global @count : s32i*
                %65 = load %64 : s32i, align 4
                %66 = const 0 : s32i
                cmp
                if %67 {
                        %68 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %5 = const 0 : s32i
        %6 = get_global @count : s32i*
        store %5, %6, align 4
        %7 = const 32768 : u16i
        call @b(%7) [all]
        scope {
                %59 = get_global @count : s32i*
                %60 = load %59 : s32i, align 4
                %61 = const 1 : s32i
                cmp
                if %62 {
                        %63 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %8 = const 0 : s32i
        %9 = get_global @count : s32i*
        store %8, %9, align 4
        %10 = const 16384 : u16i
        call @b(%10) [all]
        scope {
                %54 = get_global @count : s32i*
                %55 = load %54 : s32i, align 4
                %56 = const 1 : s32i
                cmp
                if %57 {
                        %58 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %11 = const 0 : s32i
        %12 = get_global @count : s32i*
        store %11, %12, align 4
        %13 = const 8192 : u16i
        call @b(%13) [all]
        scope {
                %49 = get_global @count : s32i*
                %50 = load %49 : s32i, align 4
                %51 = const 1 : s32i
                cmp
                if %52 {
                        %53 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %14 = const 0 : s32i
        %15 = get_global @count : s32i*
        store %14, %15, align 4
        %16 = const 49152 : u16i
        call @b(%16) [all]
        scope {
                %44 = get_global @count : s32i*
                %45 = load %44 : s32i, align 4
                %46 = const 2 : s32i
                cmp
                if %47 {
                        %48 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %17 = const 0 : s32i
        %18 = get_global @count : s32i*
        store %17, %18, align 4
        %19 = const 40960 : u16i
        call @b(%19) [all]
        scope {
                %39 = get_global @count : s32i*
                %40 = load %39 : s32i, align 4
                %41 = const 2 : s32i
                cmp
                if %42 {
                        %43 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %20 = const 0 : s32i
        %21 = get_global @count : s32i*
        store %20, %21, align 4
        %22 = const 24576 : u16i
        call @b(%22) [all]
        scope {
                %34 = get_global @count : s32i*
                %35 = load %34 : s32i, align 4
                %36 = const 2 : s32i
                cmp
                if %37 {
                        %38 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %23 = const 0 : s32i
        %24 = get_global @count : s32i*
        store %23, %24, align 4
        %25 = const 57344 : u16i
        call @b(%25) [all]
        scope {
                %29 = get_global @count : s32i*
                %30 = load %29 : s32i, align 4
                %31 = const 3 : s32i
                cmp
                if %32 {
                        %33 = get_global @abort : () -> void*
                        call @abort() [all]
                        yield
                }
                yield
        }
        %26 = get_global @exit : (s32i) -> void*
        %27 = const 0 : s32i
        call @exit(%27) [all]
        %28 = load %0 : s32i
        return %28
}
